# retail_store_robot

./: LICENSE  README.md
src/custom_msgs/: CMakeLists.txt  README.md  package.xml
src/custom_msgs/action/: Pick.action
src/custom_msgs/srv/: CheckDatabase.srv  ContinueRequest.srv  InputRequest.srv  UpdateDatabase.srv  UpdateOrder.srv
src/detection/: CMakeLists.txt  README.md  package.xml
src/detection/config/rviz/: tiago_pick_demo.rviz
src/detection/launch/: detection.launch
src/motion_control/arm_control/: CMakeLists.txt  README.md  package.xml
src/motion_control/arm_control/config/: play_motions.yaml
src/motion_control/arm_control/launch/: arm_control.launch
src/motion_control/arm_control/scripts/: pick_server.py  place_server.py
src/operator/database/: CMakeLists.txt  README.md  package.xml
src/operator/database/config/: basket.yaml  database.yaml  home.yaml
src/operator/database/launch/: database.launch
src/operator/database/scripts/: database.py
src/operator/input_handling/: CMakeLists.txt  README.md  package.xml
src/operator/input_handling/scripts/: continue_request.py  input_handling.py  input_request.py  update_order.py
src/planning/bt_action_planning/: CMakeLists.txt  README.md  package.xml
src/planning/bt_action_planning/include/: bt.h
src/planning/bt_action_planning/include/actions/: action_check_database.h  action_continue_request.h  action_drop_basket.h  action_input_request.h  action_move_base.h  action_pick.h  action_pick_basket.h  action_return_to_home.h  action_update_next_product.h  action_update_order.h
src/planning/bt_action_planning/include/conditions/: condition_database1.h  condition_database2.h  condition_handling_request.h  condition_input_request.h  condition_move_base.h  condition_return_to_home.h  condition_right_arm_state.h  condition_shoppinglist.h
src/planning/bt_action_planning/launch/: setup.launch
src/planning/bt_action_planning/src/: control_tree.cpp
src/planning/bt_action_planning/src/actions/: action_check_database.cpp  action_continue_request.cpp  action_drop_basket.cpp  action_input_request.cpp  action_move_base.cpp  action_pick.cpp  action_pick_basket.cpp  action_return_to_home.cpp  action_update_next_product.cpp  action_update_order.cpp
src/planning/bt_action_planning/src/conditions/: condition_database1.cpp  condition_database2.cpp  condition_handling_request.cpp  condition_input_request.cpp  condition_move_base.cpp  condition_return_to_home.cpp  condition_right_arm_state.cpp  condition_shoppinglist.cpp
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/launch/: empty.launch  simulation.launch  tiago_dual_gazebo.launch  tiago_dual_navigation.launch  tiago_mapping.launch
src/simulation/maps/shelves/: shelves.pgm  shelves.yaml
src/simulation/models/aruco_cube_112/: aruco_cube_112.sdf  model.config
src/simulation/models/aruco_cube_112/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_221/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_223/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_331/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_332/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_334/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_441/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_442/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_445/: aruco_cube_445.sdf  model.config
src/simulation/models/aruco_cube_445/meshes/: aruco_cube_5cm.dae
src/simulation/models/aruco_cube_555/meshes/: aruco_cube_5cm.dae
src/simulation/models/basket/: basket.sdf  model.config
src/simulation/models/basket/meshes/: basket.dae
src/simulation/worlds/: multiple_cubes.world  next_to_shelf.world  shelves.world
