<?xml version="1.0"?>
<package format="2">
  <name>bt_action_planning</name>
  <version>0.0.0</version>
  <description>The bt_action_planning package</description>

  <maintainer email="rosamaessen@todo.todo">rosamaessen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>behavior_tree_core</build_depend>
  <build_depend>behavior_tree_leaves</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>v</build_depend>

  <build_export_depend>behavior_tree_core</build_export_depend>
  <build_export_depend>behavior_tree_leaves</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>behavior_tree_core</exec_depend>
  <exec_depend>behavior_tree_leaves</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/srv/cpp"/>
  </export>
</package>
